TMDM-5995 : revert changes
git-svn-id: http://talendforge.org/svn/tom/trunk@108230 f6f1c999-d317-4740-80b0-e6d1abc6f99e